fixed overflow-x to hidden

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -38,3 +38,7 @@ button,
 a {
   cursor: pointer;
 }
+
+.main-wrapper {
+  overflow-x: hidden;
+}
